[package]
name = "solana-bpf-trace-control"
version = "1.0.0"
authors = ["NeonLabs Maintainers <maintainers@cyber-core.dev>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3.21", features = ["color"] }
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[profile.release]
overflow-checks = true
